# mcv

./: .gitignore  .gitreview  .pylintrc  AUTHORS  ChangeLog  LICENSE  MANIFEST.in  README.rst  accessor.py  consoler.py  logger.py  main.py  reporter.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  times.json  tox.ini  utils.py  version.py
common/: clients.py  cmd.py  config.py  errors.py
etc/: logging.conf  logging.yaml  mcv.conf  scenario.yaml  times.json
mcv_consoler/: accessor.py  consoler.py  exceptions.py  log.py  logger.py  main.py  reporter.py  utils.py  version.py
mcv_consoler/auth/: router.py
mcv_consoler/common/: cfglib.py  cfgparser.py  cleanup.py  clients.py  cmd.py  conf_validation.py  config.py  context.py  errors.py  procman.py  quotas.py  resource.py  ssh.py  test_discovery.py
mcv_consoler/plugins/: runner.py
mcv_consoler/templates/: _nwspeed_collapse_panel.html  base.html  nwspeed_table.html
plugins/: runner.py
plugins/ostf/: reporter.py  runner.py
plugins/rally/: runner.py
plugins/resources/: resource_reporter.py  runner.py  statistic_template.txt
plugins/selfcheck/: runner.py  selfcheck_tester.py
plugins/shaker/: runner.py
plugins/speed/: block_speed_template.html  prepare_instance.py  runner.py  speed_tester.py
plugins/tempest/: runner.py
samples/: additional_users.yaml  rally.conf
test_scenarios/: runner.py
test_scenarios/dummy/: runner.py
test_scenarios/ostf/: reporter.py  runner.py
tests/: test_accessor.py  test_groups_run.sh  test_speed.py  tmux_mcv_tests_runner.sh
(+221 files in other folders)
