[metadata]
name = mcvconsoler
summary = MCV Consoler
description-file =
    README.rst
license = Apache License, Version 2.0
version = 1.0
author = Mirantis Cloudvalidation Team
author-email = mirantis-cloud-validation-all@mirantis.com

[entry_points]
console_scripts =
    mcvconsoler = mcv_consoler.main:main

[files]
packages =
    mcv_consoler

[global]
setup-hooks =
    pbr.hooks.setup_hook
